[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/snippets_plugin/params/SnippetParameter.gd" type="Script" id=1]

[node name="SnippetParameter" type="HBoxContainer"]
margin_right = 266.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="lblPrompt" type="Label" parent="."]
unique_name_in_owner = true
margin_top = 13.0
margin_right = 47.0
margin_bottom = 27.0
text = "Prompt"

[node name="enPropertyValue" type="LineEdit" parent="."]
unique_name_in_owner = true
margin_left = 51.0
margin_right = 266.0
margin_bottom = 40.0
size_flags_horizontal = 3
clear_button_enabled = true

[connection signal="text_entered" from="enPropertyValue" to="." method="_on_PropertyValue_text_entered"]
